--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ text-align: center;
 
 }
 
-* p{
+* p,span{
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   line-height: 1.5rem;
@@ -80,8 +80,8 @@ li{
 
   background-repeat: no-repeat;
   background-position: bottom;
-  background-size:50rem;
-  background-position: 65% 40%;
+  background-size:45rem;
+  background-position: 65% 90%;
 }
 
 
@@ -254,78 +254,58 @@ border-color:hsl(176, 68%, 64%);
 
 /* --------Footer-------- */
 
-
-  .grid{
-  display: grid;
-  grid-template-rows:4fr 1fr 1fr;
-  grid-template-columns:1fr 16fr;
-  margin-left: 2rem;
-  margin-bottom:5rem;
-
-}
-
-.bottom-logo{
-  margin-left: 1rem;
-}
-
-.grid p{
-  font-size: 1.2rem;
-  line-height: 2rem;
-}
-
 .bottom-logo{
   display:block;
-  margin-left: 3rem;
-  margin-bottom: 2.5rem;
+  margin-left: 2rem;
+  margin-bottom: 1.5rem;
   width:15rem;
 }
 
-
-
-.location{
-  grid-area:1/2/2/3;
-
+footer{
+display:flex;
+flex-direction: column;
+justify-content: space-around;
+flex-wrap: wrap;
+padding:2rem;
 }
 
-.location-icon{
-  grid-area:1/1/2/2;
-  margin-top:1.8rem;
-  margin-right: 1rem;
+.footer-flex{
+  display: flex;
+  flex-direction: column;
 }
 
-.phone-icon{
-  grid-area:2/1/3/2;
-
-
-}
-
-.email-icon{
-  grid-area:3/1/4/2;
-}
-
-.phone{
-  grid-area:2/2/3/3;
+.footer-flex span{
+  padding-top: 1.5rem;
 }
 
 span{
   color:white;
   display:block;
-  margin-left:2rem;
+
 }
 
 footer p{
   text-align: left;
 }
 
-.about li{
+.about-flex li{
   display: block;
+  font-family: "raleway", sans-serif;
   font-size: 1.6rem;
   margin-bottom: 1.2rem;
 }
 
-.contact{
+.about{
   margin-top: 4rem;
+  padding:0;
 }
+
+.contact-about{
+  margin-top: 2rem;
+  padding: 0;
+}
+
+
 
 .social-icons{
   color:white;
@@ -333,8 +313,197 @@ footer p{
   text-align: center;
   margin-top: 5rem;
 }
-
-
-
- .attribution { font-size: 11px; text-align: center; }
+.attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(176, 68%, 64%); }
+
+
+  /* -------------Desktop Layout----------- */
+
+  @media only screen and (min-width:600px){
+    body{
+    background: linear-gradient(to bottom,hsl(217, 28%, 15%) 0%,hsl(217, 28%, 15%) 0 14%,
+    hsl(218, 28%, 13%)0 14%, hsl(218, 28%, 13%)0 77%, hsl(216, 53%, 9%)0 77%, hsl(216, 53%, 9%)0 100%);
+    }
+
+    .intro img{
+      width:50%;
+      margin:0 auto;
+    }
+
+    .intro h1{
+      width:60%;
+      margin:0 auto;
+    }
+
+    .intro{
+      background-image: url(images/bg-curvy-desktop.svg);
+
+      background-repeat: no-repeat;
+      background-size:100rem;
+      background-position: 45% 170%;
+    }
+
+    .flex{
+      display:flex;
+      flex-direction:row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    .card{
+      width:35rem;
+      margin:0;
+      padding:0;
+
+    }
+
+  .productive{
+    width:100%;
+
+
+    }
+
+.productive-div h2{
+  font-size: 2.7rem;
+  text-align: left;
+  padding-right: 0;
+  margin-top: 6rem;
+}
+  .productive-div {
+    display:grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 5rem;
+    margin-top: 1rem;
+}
+
+.test-div{
+  display:flex;
+}
+
+.testimonials{
+  margin:1rem;
+  padding:1rem 1rem 0 1rem;
+}
+
+#quotes{
+  bottom:13rem;
+}
+
+.cta button{
+  display: inline-block;
+}
+
+.email-btn{
+  width:32rem;
+  margin-right: 3rem;
+  margin-left: 3rem;
+}
+
+
+/* ----------Footer-------- */
+
+.bottom-logo{
+  margin-left: 4rem;
+}
+
+footer{
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  justify-content:space-around;
+  height:15rem;
+  padding:3rem;
+  margin-bottom: 2rem;
+}
+
+.grid{
+  margin: 0;
+}
+
+.footer-flex{
+  display:flex;
+  flex-direction:row;
+  justify-content: flex-start;
+  width:50%;
+
+}
+
+span{
+  padding:.5rem;
+  margin:0 0 .5rem 0;
+}
+
+.location{
+  width:40%;
+}
+
+.footer-flex img{
+  width:20px;
+  display: inline-flex;
+  margin-right: 1rem;
+}
+
+.about-flex{
+  display:flex;
+  justify-content: flex-start;
+  width:25%;
+  font-family: "Raleway", sans-serif;
+
+}
+
+.about-flex li{
+  font-size: 1rem;
+  display: block;
+}
+
+.about{
+  margin-top: 2rem;
+}
+
+.contact-about{
+  display: flex;
+  flex-direction: column;
+  margin-left: 3rem;
+  font-family: "Raleway", sans-serif;
+
+
+}
+
+.contact-about li{
+  margin-bottom: 1.2rem;
+
+
+}
+
+.phone-email{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  margin-top: .5rem;
+  margin-left: 2rem;
+
+}
+
+.social-icons{
+  display: flex;
+  justify-content:space-around;
+  width:12%;
+  height:10rem;
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+  }
