--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ border-color:hsl(176, 68%, 64%);
   background-color: hsl(217, 28%, 15%);
   width:85%;
   margin: 10rem auto 6rem auto;
-  padding: 2rem 0;
+  padding: 2rem 1rem;
   border-radius: 20px;
 }
 
@@ -359,6 +359,7 @@ footer p{
 
   .productive{
     width:100%;
+    margin-left: 2rem;
 
 
     }
@@ -375,6 +376,7 @@ footer p{
     grid-template-columns: 1fr 1fr;
     margin-bottom: 5rem;
     margin-top: 1rem;
+    width: 95%;
 }
 
 .test-div{
@@ -392,7 +394,7 @@ footer p{
 
 .cta button{
   display: inline-block;
-  /* margin: 0; */
+
 
 }
 
@@ -418,7 +420,7 @@ footer p{
 footer{
   display: flex;
   flex-direction: row;
-  align-content: flex-start;
+
   justify-content:space-around;
   height:15rem;
   padding:3rem;
@@ -487,7 +489,6 @@ span{
 .phone-email{
   display: flex;
   flex-direction: column;
-  align-items:center;
   margin-top: .5rem;
   margin-left: 2rem;
 
@@ -498,20 +499,6 @@ span{
   justify-content:space-around;
   width:12%;
   height:10rem;
-
-
-
-
-
-
-
 }
 
-
-
-
-
-
-
-
-  }
+}
