--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
  margin:0;
  padding:0;
- background: linear-gradient(to bottom,hsl(217, 28%, 15%) 0%,hsl(217, 28%, 15%) 0 12%,
- hsl(218, 28%, 13%)0 14%, hsl(218, 28%, 13%)0 77%, hsl(216, 53%, 9%)0 77%, hsl(216, 53%, 9%)0 100%);
+ background: linear-gradient(to bottom,hsl(217, 28%, 15%) 0%,hsl(217, 28%, 15%) 0 10%,
+ hsl(218, 28%, 13%)0 10%, hsl(218, 28%, 13%)0 75%, hsl(216, 53%, 9%)0 75%, hsl(216, 53%, 9%)0 100%);
  background-repeat: no-repeat;
 
 }
@@ -75,13 +75,13 @@ li{
 
 
 /* ------Intro--------- */
-.intro{
+main{
   background-image: url(images/bg-curvy-mobile.svg);
 
   background-repeat: no-repeat;
   background-position: bottom;
-  background-size:45rem;
-  background-position: 65% 90%;
+  background-size:35rem;
+  background-position: 65% 7%;
 }
 
 
@@ -89,6 +89,7 @@ li{
   display: block;
   width:80%;
   padding:1rem;
+  margin-left: 2rem;
 
 }
 
@@ -319,10 +320,10 @@ footer p{
 
   /* -------------Desktop Layout----------- */
 
-  @media only screen and (min-width:600px){
+  @media only screen and (min-width:700px){
     body{
-    background: linear-gradient(to bottom,hsl(217, 28%, 15%) 0%,hsl(217, 28%, 15%) 0 14%,
-    hsl(218, 28%, 13%)0 14%, hsl(218, 28%, 13%)0 77%, hsl(216, 53%, 9%)0 77%, hsl(216, 53%, 9%)0 100%);
+    background: linear-gradient(to bottom,hsl(217, 28%, 15%) 0%,hsl(217, 28%, 15%) 0 28%,
+    hsl(218, 28%, 13%)0 28%, hsl(218, 28%, 13%)0 77%, hsl(216, 53%, 9%)0 77%, hsl(216, 53%, 9%)0 100%);
     }
 
     .intro img{
@@ -335,12 +336,12 @@ footer p{
       margin:0 auto;
     }
 
-    .intro{
+    main{
       background-image: url(images/bg-curvy-desktop.svg);
 
       background-repeat: no-repeat;
-      background-size:100rem;
-      background-position: 45% 170%;
+      background-size:100%;
+      background-position: 65% 20%;
     }
 
     .flex{
